# suiviProjets

./: .editorconfig  .env.local.example  .gitignore  .prettierignore  CLAUDE.md  angular.json  eslint.config.js  jest.config.js  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  setup-jest.ts  tsconfig.json  tsconfig.spec.json
.claude/: settings.json
.claude/hooks/: formater-et-analyser.sh  journaliser-prompt.sh
.claude/rules/: 01-usage-ia-et-conventions.md  09-normes-developpement.md  10-normes-securite.md  11-normes-tests.md  12-poste-developpeur.md
.devcontainer/: devcontainer.json
.github/workflows/: publication-windows.yml  validation.yml
docs/: 00_promptInitial.md  01_modalitesUsageEtConventions.md  02_glossaire.md  03_expressionBesoin.md  04_casUsage.md  05_reglesGestion.md  06_parcoursUtilisateurs.md  07_exigencesNonFonctionnelles.md  08_arborescenceNavigation.md  09_maquettes.md  11_architectureTechnique.md  12_modeleDonnees.md  13_conceptionDetaillee.md  14_normesDeveloppement.md  16_normesTests.md  20_guideUtilisateur.md  plan_01_miseEnPlace.md  plan_09_normesDeveloppement.md  plan_10_normesSecurite.md  plan_11_normesTests.md
docs/00_init&prompt/: 00_init.md  00_promptDeveloppement.md  00_promptInitial.md
docs/01_besoin/: README.md  Specification.md  Suivi Qualimetrie.dc.html  data.js  exemple-donnees.json
docs/02_documentation/: 01_modalitesUsageEtConventions.md  02_glossaire.md  03_expressionBesoin.md  04_casUsage.md  05_reglesGestion.md  06_parcoursUtilisateurs.md  07_exigencesNonFonctionnelles.md  08_arborescenceNavigation.md  09_maquettes.md  10_charteErgonomie.md  11_architectureTechnique.md  12_modeleDonnees.md  13_conceptionDetaillee.md  14_normesDeveloppement.md  15_normesSecurite.md  16_normesTests.md  17_posteDeveloppeur.md  18_pic.md  19_environnementProduction.md  20_guideUtilisateur.md
docs/02_documentation/_modèles/: 04_casUsage.md  10_charteErgonomie.md  11_architectureTechnique.md  14_normesDeveloppement.md  15_normesSecurite.md  16_normesTests.md  17_posteDeveloppeur.md  18_pic.md  19_environnementProduction.md  20_guideUtilisateur.md
docs/03_plan/: plan_01_miseEnPlace.md  plan_09_normesDeveloppement.md  plan_10_normesSecurite.md  plan_11_normesTests.md  plan_12_environnementsEtCI.md  plan_13_developpement.md
docs/03_plan/_modèles/: plan_miseEnPlace.md
docs/04_rapports/: rapportDeDeveloppement.md
docs/_modèles/: 00_init.md  00_promptInitial.md  01_modalitesUsageEtConventions.md  02_glossaire.md  03_expressionBesoin.md  04_casUsage.md  05_reglesGestion.md  06_parcoursUtilisateurs.md  07_exigencesNonFonctionnelles.md  08_arborescenceNavigation.md  09_maquettes.md  11_architectureTechnique.md  12_modeleDonnees.md  13_conceptionDetaillee.md  14_normesDeveloppement.md  15_normesSecurite.md  16_normesTests.md  19_environnementProduction.md  modele-rapport-developpement.md  modele-regle.md  plan_miseEnPlace.md
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commandes.rs  connecteurs.rs  lib.rs  main.rs  modele.rs  persistance.rs
src-tauri/src/commandes/: README.md  administration.rs  audit.rs  connectivite.rs  etat_session.rs  fichier.rs
src-tauri/src/connecteurs/: README.md  commun.rs  exemple_reference.rs  gitlab.rs  sonar.rs  tests_integration_reelle.rs
src-tauri/src/modele/: README.md  racine.rs
src-tauri/src/persistance/: README.md  administration.rs  audit.rs  enveloppe.rs  erreurs.rs  kdf.rs  migration.rs  moteur.rs
src/app/: app.routes.ts  app.spec.ts  app.ts
src/app/composants/: README.md  exemple-reference.component.html  exemple-reference.component.scss  exemple-reference.component.spec.ts  exemple-reference.component.ts
src/app/composants/confirmation-mot-de-passe/: confirmation-mot-de-passe.component.html  confirmation-mot-de-passe.component.scss  confirmation-mot-de-passe.component.spec.ts  confirmation-mot-de-passe.component.ts
src/app/composants/confirmation-suppression/: confirmation-suppression.component.html  confirmation-suppression.component.scss  confirmation-suppression.component.spec.ts  confirmation-suppression.component.ts
src/app/ecrans/: README.md
src/app/ecrans/administration/: administration.component.html  administration.component.scss  administration.component.spec.ts  administration.component.ts
src/app/ecrans/administration/groupes/: groupes-admin.component.html  groupes-admin.component.scss  groupes-admin.component.spec.ts  groupes-admin.component.ts
src/app/ecrans/administration/projets/: projets-admin.component.html  projets-admin.component.scss  projets-admin.component.spec.ts  projets-admin.component.ts
src/app/ecrans/administration/sources/: sources-admin.component.html  sources-admin.component.scss  sources-admin.component.spec.ts  sources-admin.component.ts
src/app/ecrans/audits/brouillon/: brouillon.component.html  brouillon.component.scss  brouillon.component.spec.ts  (+1 more)
src/app/services/: README.md
src/app/services/avecetat/: README.md
src/app/services/sansetat/: README.md
(+47 files in other folders)
